# dec-sixbit-rs

./: CHANGELOG.md  Cargo.toml  README.md
benches/: sixbit_bench.md  sixbit_bench.rs
src/: decode.rs  encode.rs  lib.rs  struct_api.rs
