[package]
name = "dec-sixbit"
version = "0.1.0"
authors = ["Inomoto, Yota <yota@perforate.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.78.0"

description = "Implementation of DEC SIXBIT encoding"
include = [
    "/src",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
]

readme = "README.md"

categories = ["encoding", "text-processing"]
keywords = ["sixbit", "dec", "encoding", "text", "serialization"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2.0"

[dev-dependencies]
bincode = "1.3"
serde_json = "1.0"

[features]
default = ["with-struct"]
with-struct = ["serde"]
nightly = []

[[bench]]
name = "sixbit_bench"
harness = true
